[package]
name = "xmas_tree_player"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "latest" }
csv = "1.1.6"
itertools = "0.10.3"
structopt = "0.3.25"
